--- a/about.html
+++ b/about.html
@@ -4,70 +4,130 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>소개 - Project.PAW</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+  <style>
+    body {
+      margin:0;
+      background:#fafafa;
+      color:#111;
+      font-family:'SUIT Variable','Pretendard',system-ui,sans-serif;
+    }
+    main {
+      max-width:860px;
+      margin:0 auto;
+      padding:60px 20px 120px;
+    }
+    h1 {
+      font-size:2.6rem;
+      font-weight:900;
+      line-height:1.3;
+      margin-bottom:24px;
+      text-align:center;
+    }
+    h2 {
+      font-size:1.6rem;
+      font-weight:800;
+      margin:48px 0 18px;
+    }
+    p {
+      font-size:1.2rem;
+      line-height:1.9;
+      margin:0 0 20px;
+      color:#333;
+    }
+    p strong {
+      color:#E87722;
+      font-weight:800;
+    }
+    .signature {
+      text-align:right;
+      margin-top:40px;
+      font-size:1rem;
+      color:#666;
+    }
+
+    /* CTA Dock */
+    .cta-dock {
+      position:fixed;
+      bottom:16px;
+      right:16px;
+      left:16px;
+      z-index:50;
+      display:flex;
+      gap:12px;
+      justify-content:center;
+    }
+    .btn-cta {
+      flex:1;
+      padding:14px 18px;
+      border-radius:12px;
+      font-weight:700;
+      font-size:1.05rem;
+      text-align:center;
+      text-decoration:none;
+    }
+    .btn-kakao {
+      background:#FEE500;
+      color:#111;
+    }
+    .btn-kakao:hover {background:#e5d200;}
+    .btn-dark {
+      background:#111;
+      color:#fff;
+    }
+    .btn-dark:hover {background:#333;}
+    @media(max-width:600px){
+      .cta-dock {flex-direction:column;}
+    }
+  </style>
 </head>
 <body>
   <!-- Header -->
   <div data-include="header"></div>
 
-  <main class="container" style="padding:60px 0;font-family:'SUIT Variable','Pretendard',sans-serif;">
-    
+  <main>
     <!-- Hero -->
-    <section style="text-align:center;margin-bottom:80px;">
-      <div style="background:#f9fafb;border:1px solid #e5e7eb;border-radius:14px;
-                  padding:60px 20px;max-width:780px;margin:0 auto;">
-        <h1 style="font-size:2.6rem;font-weight:800;margin-bottom:20px;color:#111;line-height:1.3;">
-          ⚡ 아직은 작은 실험입니다
-        </h1>
-        <p style="font-size:1.25rem;color:#555;max-width:640px;margin:0 auto;line-height:1.8;">
-          그러나 나아가는 길은 깊고 따뜻하다고 믿습니다.
-        </p>
-      </div>
+    <section style="text-align:center;margin-bottom:60px;">
+      <h1>⚡ 아직은 작은 실험이지만<br/>깊고 따뜻하게 나아가겠습니다.</h1>
     </section>
 
     <!-- 시작 -->
-    <section style="max-width:720px;margin:0 auto 70px;">
-      <h2 style="font-size:1.5rem;font-weight:700;margin-bottom:18px;color:#111;">시작</h2>
-      <p style="color:#555;line-height:1.9;font-size:1.15rem;margin:0 0 18px;">
-        단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.  
-        용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.
-      </p>
-      <p style="color:#555;line-height:1.9;font-size:1.15rem;margin:0 0 18px;">
-        누구는 책임을 짊어지고,  
-        누구는 도와주고 싶다고 말했습니다.
-      </p>
-      <p style="color:#555;line-height:1.9;font-size:1.15rem;margin:0;">
-        저는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong>
-      </p>
+    <section>
+      <h2>시작</h2>
+      <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
+         용기 있는 구조 뒤에는 늘 <strong>병원비라는 벽</strong>이 있었습니다.</p>
+      <p>누구는 책임을 짊어지고,<br/>
+         누구는 도와주고 싶다고 말했습니다.</p>
+      <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
     </section>
 
     <!-- 본질 -->
-    <section style="max-width:720px;margin:0 auto 50px;">
-      <h2 style="font-size:1.5rem;font-weight:700;margin-bottom:18px;color:#111;">본질</h2>
-      <p style="color:#555;line-height:1.9;font-size:1.15rem;margin:0 0 18px;">
-        Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.
-      </p>
-      <p style="color:#555;line-height:1.9;font-size:1.15rem;margin:0 0 18px;">
-        사람의 마음이 머뭇거릴 때,  
-        그 망설임에 <strong>용기</strong>를 덧붙여주는 일.  
-      </p>
-      <p style="color:#555;line-height:1.9;font-size:1.15rem;margin:0 0 28px;">
-        그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.
-      </p>
-      <p style="text-align:right;font-size:0.95rem;color:#888;margin:0;">
-        – Project.PAW, 시작한 사람 –
-      </p>
+    <section>
+      <h2>본질</h2>
+      <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
+      <p>사람의 마음이 머뭇거릴 때,<br/>
+         그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
+      <p>그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.</p>
+      <p class="signature">– Project.PAW 시작한 사람 –</p>
     </section>
-
   </main>
+
+  <!-- CTA Dock -->
+  <div class="cta-dock">
+    <a href="project_list.html" class="btn-cta btn-dark">🔎 프로젝트 둘러보기</a>
+    <a href="index.html#projects" class="btn-cta btn-kakao">💬 후원하러 가기</a>
+  </div>
 
   <!-- Footer -->
   <div data-include="footer"></div>
 
-  <script type="module" src="js/include.js"></script>
   <script type="module">
     import { injectLayout } from "./js/include.js";
-    injectLayout();
+    injectLayout({ active:'about' });
+
+    // 공유 기능이 필요하면 추가
   </script>
 </body>
 </html>
