--- a/about.html
+++ b/about.html
@@ -4,120 +4,88 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>소개 - Project.PAW</title>
-  <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="css/app.css"/>
   <style>
-    body {
-      margin:0;
-      background:#fafafa;
-      color:#111;
-      font-family:'SUIT Variable','Pretendard',system-ui,sans-serif;
-    }
-    main {
-      max-width:860px;
-      margin:0 auto;
-      padding:60px 20px 120px;
-    }
-    h1 {
-      font-size:2.6rem;
-      font-weight:900;
-      line-height:1.3;
-      margin-bottom:24px;
-      text-align:center;
-    }
-    h2 {
-      font-size:1.6rem;
-      font-weight:800;
-      margin:48px 0 18px;
-    }
-    p {
-      font-size:1.2rem;
-      line-height:1.9;
-      margin:0 0 20px;
-      color:#333;
-    }
-    p strong {
-      color:#E87722;
-      font-weight:800;
-    }
-    .signature {
-      text-align:right;
-      margin-top:40px;
-      font-size:1rem;
-      color:#666;
-    }
+    body{font-family:'SUIT Variable','Pretendard',sans-serif;background:#fafafa;margin:0}
+    .container{max-width:960px;margin:0 auto;padding:60px 20px}
+    h1,h2{color:#111}
+    p{color:#555;line-height:1.8;font-size:1.1rem}
+    section{margin-bottom:80px}
 
-    /* CTA Dock */
-    .cta-dock {
-      position:fixed;
-      bottom:16px;
-      right:16px;
-      left:16px;
-      z-index:50;
-      display:flex;
-      gap:12px;
-      justify-content:center;
+    /* Floating mini CTA */
+    .cta-float{
+      position:fixed;bottom:20px;right:20px;z-index:100;
+      display:flex;flex-direction:column;gap:12px;
     }
-    .btn-cta {
-      flex:1;
-      padding:14px 18px;
-      border-radius:12px;
-      font-weight:700;
-      font-size:1.05rem;
-      text-align:center;
-      text-decoration:none;
+    .cta-btn{
+      width:48px;height:48px;border-radius:50%;
+      display:flex;align-items:center;justify-content:center;
+      font-size:1.2rem;font-weight:700;cursor:pointer;
+      box-shadow:0 4px 10px rgba(0,0,0,0.2);
+      border:none;transition:.2s;
     }
-    .btn-kakao {
-      background:#FEE500;
-      color:#111;
-    }
-    .btn-kakao:hover {background:#e5d200;}
-    .btn-dark {
-      background:#111;
-      color:#fff;
-    }
-    .btn-dark:hover {background:#333;}
-    @media(max-width:600px){
-      .cta-dock {flex-direction:column;}
-    }
+    .cta-btn:hover{transform:translateY(-3px)}
+    .btn-kakao{background:#FEE500;color:#111}
+    .btn-share{background:#444;color:#fff}
   </style>
 </head>
 <body>
   <!-- Header -->
   <div data-include="header"></div>
 
-  <main>
+  <main class="container">
     <!-- Hero -->
-    <section style="text-align:center;margin-bottom:60px;">
-      <h1>⚡ 아직은 작은 실험이지만<br/>깊고 따뜻하게 나아가겠습니다.</h1>
+    <section style="text-align:center;">
+      <div style="background:#f9fafb;border:1px solid #e5e7eb;border-radius:14px;
+                  padding:60px 20px;max-width:780px;margin:0 auto;">
+        <h1 style="font-size:2.4rem;font-weight:800;margin-bottom:20px;line-height:1.3;">
+          ⚡ 아직은 작은 실험이지만 깊고 따뜻하게 나아가겠습니다
+        </h1>
+        <p style="font-size:1.2rem;color:#555;max-width:640px;margin:0 auto;line-height:1.8;">
+          그러나 이 길은 깊고 따뜻하다고 믿습니다.
+        </p>
+      </div>
     </section>
 
     <!-- 시작 -->
-    <section>
-      <h2>시작</h2>
-      <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
-         용기 있는 구조 뒤에는 늘 <strong>병원비라는 벽</strong>이 있었습니다.</p>
-      <p>누구는 책임을 짊어지고,<br/>
-         누구는 도와주고 싶다고 말했습니다.</p>
-      <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
+    <section style="max-width:720px;margin:0 auto;">
+      <h2 style="font-size:1.5rem;font-weight:700;margin-bottom:18px;">시작</h2>
+      <p>
+        단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
+        용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.
+      </p>
+      <p>
+        누구는 책임을 짊어지고,<br/>
+        누구는 도와주고 싶다고 말했습니다.
+      </p>
+      <p>
+        Project.PAW는 지금도 그 마음들을 이어주고 싶습니다.
+      </p>
     </section>
 
     <!-- 본질 -->
-    <section>
-      <h2>본질</h2>
-      <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
-      <p>사람의 마음이 머뭇거릴 때,<br/>
-         그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
-      <p>그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.</p>
-      <p class="signature">– Project.PAW 시작한 사람 –</p>
+    <section style="max-width:720px;margin:0 auto;">
+      <h2 style="font-size:1.5rem;font-weight:700;margin-bottom:18px;">본질</h2>
+      <p>
+        Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.
+      </p>
+      <p>
+        사람의 마음이 머뭇거릴 때,<br/>
+        그 망설임에 <strong>용기</strong>를 덧붙여주는 일.
+      </p>
+      <p style="margin-bottom:28px;">
+        그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.
+      </p>
+      <p style="text-align:right;font-size:0.95rem;color:#888;margin:0;">
+        – Project.PAW 시작한 사람 –
+      </p>
     </section>
   </main>
 
-  <!-- CTA Dock -->
-  <div class="cta-dock">
-    <a href="project_list.html" class="btn-cta btn-dark">🔎 프로젝트 둘러보기</a>
-    <a href="index.html#projects" class="btn-cta btn-kakao">💬 후원하러 가기</a>
+  <!-- Floating CTA -->
+  <div class="cta-float">
+    <a href="project_list.html" class="cta-btn btn-kakao" title="후원하러 가기">💬</a>
+    <button class="cta-btn btn-share" id="shareCopy" title="링크 복사">🔗</button>
   </div>
 
   <!-- Footer -->
@@ -125,9 +93,13 @@
 
   <script type="module">
     import { injectLayout } from "./js/include.js";
-    injectLayout({ active:'about' });
+    injectLayout();
 
-    // 공유 기능이 필요하면 추가
+    // 공유 버튼 기능
+    document.getElementById("shareCopy")?.addEventListener("click",()=>{
+      navigator.clipboard.writeText(window.location.href)
+        .then(()=>alert("링크가 복사되었습니다."));
+    });
   </script>
 </body>
 </html>
