--- a/about.html
+++ b/about.html
@@ -6,27 +6,48 @@
   <title>소개 - Project.PAW</title>
   <link rel="stylesheet" href="css/app.css"/>
   <style>
-    body{font-family:'SUIT Variable','Pretendard',sans-serif;background:#fafafa;margin:0}
-    .container{max-width:960px;margin:0 auto;padding:60px 20px}
-    h1,h2{color:#111}
-    p{color:#555;line-height:1.8;font-size:1.1rem}
-    section{margin-bottom:80px}
+    body{
+      font-family:'SUIT Variable','Pretendard',sans-serif;
+      margin:0;background:#fafafa;color:#111;
+    }
+    .container{max-width:880px;margin:0 auto;padding:60px 20px}
+    h1{font-size:2.6rem;font-weight:900;margin-bottom:24px;line-height:1.4;color:#111}
+    h2{font-size:1.6rem;font-weight:800;margin:50px 0 20px;color:#111}
+    p{font-size:1.2rem;line-height:1.9;color:#333;margin:0 0 22px}
+    strong{color:#000;font-weight:800}
 
-    /* Floating mini CTA */
+    .hero-box{
+      background:#f9fafb;border:1px solid #e5e7eb;border-radius:14px;
+      padding:60px 24px;text-align:center;margin-bottom:80px
+    }
+    .hero-box h1{font-size:2.3rem;margin-bottom:18px}
+    .hero-box p{font-size:1.3rem;color:#555;margin:0 auto;max-width:680px}
+
+    .signature{
+      text-align:left;font-size:1rem;color:#666;margin-top:35px;font-style:italic
+    }
+
+    /* floating cta */
     .cta-float{
-      position:fixed;bottom:20px;right:20px;z-index:100;
-      display:flex;flex-direction:column;gap:12px;
+      position:fixed;bottom:20px;right:20px;display:flex;
+      flex-direction:column;gap:12px;z-index:100
     }
-    .cta-btn{
-      width:48px;height:48px;border-radius:50%;
-      display:flex;align-items:center;justify-content:center;
-      font-size:1.2rem;font-weight:700;cursor:pointer;
-      box-shadow:0 4px 10px rgba(0,0,0,0.2);
-      border:none;transition:.2s;
+    .cta-float button{
+      border:none;padding:12px 16px;border-radius:12px;
+      font-weight:700;font-size:.95rem;cursor:pointer;
+      display:flex;align-items:center;gap:6px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.15)
     }
-    .cta-btn:hover{transform:translateY(-3px)}
     .btn-kakao{background:#FEE500;color:#111}
-    .btn-share{background:#444;color:#fff}
+    .btn-kakao:hover{background:#e5d200}
+    .btn-link{background:#6b7280;color:#fff}
+    .btn-link:hover{background:#555}
+
+    @media(max-width:600px){
+      h1{font-size:2.2rem}
+      p{font-size:1.1rem}
+      .cta-float button{font-size:.9rem;padding:10px 14px}
+    }
   </style>
 </head>
 <body>
@@ -35,70 +56,54 @@
 
   <main class="container">
     <!-- Hero -->
-    <section style="text-align:center;">
-      <div style="background:#f9fafb;border:1px solid #e5e7eb;border-radius:14px;
-                  padding:60px 20px;max-width:780px;margin:0 auto;">
-        <h1 style="font-size:2.4rem;font-weight:800;margin-bottom:20px;line-height:1.3;">
-          ⚡ 아직은 작은 실험이지만 깊고 따뜻하게 나아가겠습니다
-        </h1>
-        <p style="font-size:1.2rem;color:#555;max-width:640px;margin:0 auto;line-height:1.8;">
-          그러나 이 길은 깊고 따뜻하다고 믿습니다.
-        </p>
-      </div>
+    <section class="hero-box">
+      <h1>⚡ 아직은 작은 실험이지만 깊고 따뜻하게 나아가겠습니다.</h1>
+      <p>Project.PAW는 믿습니다. 따뜻한 연결은 작아도 깊게 번집니다.</p>
     </section>
 
     <!-- 시작 -->
-    <section style="max-width:720px;margin:0 auto;">
-      <h2 style="font-size:1.5rem;font-weight:700;margin-bottom:18px;">시작</h2>
-      <p>
-        단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
-        용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.
-      </p>
-      <p>
-        누구는 책임을 짊어지고,<br/>
-        누구는 도와주고 싶다고 말했습니다.
-      </p>
-      <p>
-        Project.PAW는 지금도 그 마음들을 이어주고 싶습니다.
-      </p>
+    <section>
+      <h2>시작</h2>
+      <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
+         용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.</p>
+      <p>누구는 책임을 짊어지고,<br/>
+         누구는 도와주고 싶다고 말했습니다.</p>
+      <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
     </section>
 
     <!-- 본질 -->
-    <section style="max-width:720px;margin:0 auto;">
-      <h2 style="font-size:1.5rem;font-weight:700;margin-bottom:18px;">본질</h2>
-      <p>
-        Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.
-      </p>
-      <p>
-        사람의 마음이 머뭇거릴 때,<br/>
-        그 망설임에 <strong>용기</strong>를 덧붙여주는 일.
-      </p>
-      <p style="margin-bottom:28px;">
-        그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.
-      </p>
-      <p style="text-align:right;font-size:0.95rem;color:#888;margin:0;">
-        – Project.PAW 시작한 사람 –
-      </p>
+    <section>
+      <h2>본질</h2>
+      <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
+      <p>사람의 마음이 머뭇거릴 때,<br/>
+         그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
+      <p>그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.</p>
+
+      <div class="signature">– Project.PAW 시작한 사람 –</div>
     </section>
   </main>
-
-  <!-- Floating CTA -->
-  <div class="cta-float">
-    <a href="project_list.html" class="cta-btn btn-kakao" title="후원하러 가기">💬</a>
-    <button class="cta-btn btn-share" id="shareCopy" title="링크 복사">🔗</button>
-  </div>
 
   <!-- Footer -->
   <div data-include="footer"></div>
 
+  <!-- Floating CTA -->
+  <div class="cta-float">
+    <button class="btn-kakao" onclick="alert('카카오톡 오픈채팅으로 연결됩니다 (MVP 단계)')">
+      💛 후원하기
+    </button>
+    <button class="btn-link" id="copyBtn">
+      🔗 PAW 링크 복사
+    </button>
+  </div>
+
+  <script type="module" src="js/include.js"></script>
   <script type="module">
     import { injectLayout } from "./js/include.js";
     injectLayout();
 
-    // 공유 버튼 기능
-    document.getElementById("shareCopy")?.addEventListener("click",()=>{
+    document.getElementById("copyBtn").addEventListener("click",()=>{
       navigator.clipboard.writeText(window.location.href)
-        .then(()=>alert("링크가 복사되었습니다."));
+        .then(()=>alert("현재 페이지 링크가 복사되었습니다."));
     });
   </script>
 </body>
