--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,9 @@ button.approve{background:#16a34a;color:#fff;border:none}
 button.delete{background:#dc2626;color:#fff;border:none}
 button.edit{background:#2563eb;color:#fff;border:none}
 .error{color:#dc2626;font-size:.9rem;margin-top:10px;text-align:center}
+form.editor{margin-top:30px;display:grid;gap:12px;max-width:500px}
+form.editor label{font-weight:700}
+form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-radius:8px}
 @media(max-width:600px){
   table{font-size:.8rem}
   .actions{flex-direction:column}
@@ -24,17 +27,16 @@ button.edit{background:#2563eb;color:#fff;border:none}
 }
 
 /* 모달 */
-.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5);
-  align-items:center;justify-content:center;z-index:9999;}
-.modal .box{background:#fff;border-radius:10px;max-width:700px;width:95%;max-height:90vh;
-  overflow:auto;padding:20px;}
+.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;
+  background:rgba(0,0,0,.5);align-items:center;justify-content:center;z-index:9999;}
+.modal .box{background:#fff;border-radius:10px;max-width:700px;width:95%;
+  max-height:90vh;overflow:auto;padding:20px;}
 .modal h2{margin-top:0}
 .modal form{display:grid;gap:12px}
 .modal label{font-weight:700}
 .modal input,.modal textarea{padding:8px;border:1px solid #ddd;border-radius:8px}
 .modal textarea{min-height:100px;resize:vertical}
 .modal .btns{display:flex;gap:10px;justify-content:flex-end;margin-top:10px}
-.modal button{font-weight:700}
 </style>
 </head>
 <body>
@@ -67,13 +69,53 @@ button.edit{background:#2563eb;color:#fff;border:none}
           <tr><td colspan="8" class="muted">불러오는 중...</td></tr>
         </tbody>
       </table>
+
+      <!-- 원본 editorSection 그대로 -->
+      <section id="editorSection" style="display:none">
+        <h2>프로젝트 수치/링크 업데이트</h2>
+        <form id="editorForm" class="editor">
+          <input type="hidden" id="edit-id"/>
+
+          <label>프로젝트 번호 (projectNumber)</label>
+          <input type="number" id="edit-projectNumber"/>
+
+          <label>조회수 (views)</label>
+          <input type="number" id="edit-views"/>
+
+          <label>등록일자 (createdAt)</label>
+          <input type="date" id="edit-createdAt"/>
+
+          <label>승인일자 (approvedAt)</label>
+          <input type="date" id="edit-approvedAt"/>
+
+          <label>구조자 계좌번호 (rescuerAccount)</label>
+          <input type="text" id="edit-rescuerAccount"/>
+
+          <label>모금액 (currentAmount)</label>
+          <input type="number" id="edit-currentAmount"/>
+
+          <label>참여자 수 (supporterCount)</label>
+          <input type="number" id="edit-supporterCount"/>
+
+          <label>목표 금액 (goalAmount)</label>
+          <input type="number" id="edit-goalAmount"/>
+
+          <label>한줄 메시지 (keyMessage)</label>
+          <input type="text" id="edit-keyMessage"/>
+
+          <label>카카오톡 오픈채팅 링크</label>
+          <input type="url" id="edit-kakaoChatUrl"/>
+
+          <button type="submit">저장하기</button>
+        </form>
+      </section>
     </section>
   </main>
 
-  <!-- 프로젝트 전체 편집 모달 -->
+  <!-- 추가: 전체 문구 편집 모달 -->
   <div class="modal" id="editModal">
     <div class="box">
-      <h2>프로젝트 전체 편집</h2>
+      <h2>프로젝트 전체 문구 편집</h2>
       <form id="fullEditForm">
         <input type="hidden" id="pid"/>
 
@@ -102,7 +144,7 @@ button.edit{background:#2563eb;color:#fff;border:none}
         <textarea id="edit-adminMessage"></textarea>
 
         <div class="btns">
-          <button type="button" id="closeModal" style="background:#ccc;color:#111;">닫기</button>
+          <button type="button" id="closeModal">닫기</button>
           <button type="submit" style="background:#2563eb;color:#fff;">저장하기</button>
         </div>
       </form>
@@ -122,7 +164,10 @@ button.edit{background:#2563eb;color:#fff;border:none}
     const errorDiv = document.getElementById("error");
     const adminSection = document.getElementById("adminSection");
     const $body = document.getElementById("projects-body");
+    const editorSection = document.getElementById("editorSection");
+    const editorForm = document.getElementById("editorForm");
 
+    // 모달
     const modal=document.getElementById("editModal");
     const closeModalBtn=document.getElementById("closeModal");
     const fullEditForm=document.getElementById("fullEditForm");
@@ -174,7 +219,8 @@ button.edit{background:#2563eb;color:#fff;border:none}
             <td>${fmtStatus(p)}</td>
             <td class="actions">
               ${!p.adminApproved?`<button class="approve" data-id="${p.id}">승인</button>`:''}
-              <button class="edit" data-id="${p.id}">편집</button>
+              <button class="edit" data-id="${p.id}">수치편집</button>
+              <button class="full-edit" data-id="${p.id}">문구편집</button>
               <button class="delete" data-id="${p.id}">삭제</button>
             </td>
           </tr>`).join('');
@@ -199,6 +245,27 @@ button.edit{background:#2563eb;color:#fff;border:none}
         }
       }
       if(e.target.matches('.edit')){
+        // 원본 수치/링크 편집 로직 그대로
+        const id=e.target.dataset.id;
+        const all=await fetchAllProjects();
+        const p=all.find(x=>x.id===id);
+        if(!p)return;
+        document.getElementById("edit-id").value=id;
+        document.getElementById("edit-projectNumber").value=p.projectNumber ?? "";
+        document.getElementById("edit-views").value=p.views ?? 0;
+        document.getElementById("edit-createdAt").value=p.createdAt ? String(p.createdAt).split("T")[0] : "";
+        document.getElementById("edit-approvedAt").value=p.approvedAt ? String(p.approvedAt).split("T")[0] : "";
+        document.getElementById("edit-rescuerAccount").value=p.rescuerAccount ?? "";
+        document.getElementById("edit-currentAmount").value=p.currentAmount||0;
+        document.getElementById("edit-supporterCount").value=p.supporterCount||0;
+        document.getElementById("edit-goalAmount").value=p.goalAmount||0;
+        document.getElementById("edit-keyMessage").value=p.keyMessage||"";
+        document.getElementById("edit-kakaoChatUrl").value=p.kakaoChatUrl||"";
+        editorSection.style.display="block";
+        editorForm.scrollIntoView({behavior:"smooth"});
+      }
+      if(e.target.matches('.full-edit')){
+        // 새 모달 전체 문구 편집
         const id=e.target.dataset.id;
         const all=await fetchAllProjects();
         const p=all.find(x=>x.id===id);
@@ -214,11 +281,38 @@ button.edit{background:#2563eb;color:#fff;border:none}
         document.getElementById("edit-receiptUrls").value=(p.receiptUrls||[]).join(",");
         document.getElementById("edit-adminMessage").value=p.adminMessage||"";
 
-        modal.style.display="flex"; // 모달 열기
+        modal.style.display="flex";
       }
     });
 
     closeModalBtn.addEventListener("click",()=>{modal.style.display="none";});
+
+    editorForm.addEventListener("submit", async e=>{
+      e.preventDefault();
+      const id=document.getElementById("edit-id").value;
+      if(!id)return alert("잘못된 프로젝트 ID");
+
+      const data={
+        projectNumber: Number(document.getElementById("edit-projectNumber").value)||null,
+        views: Number(document.getElementById("edit-views").value)||0,
+        createdAt: document.getElementById("edit-createdAt").value||null,
+        approvedAt: document.getElementById("edit-approvedAt").value||null,
+        rescuerAccount: document.getElementById("edit-rescuerAccount").value.trim(),
+        currentAmount: Number(document.getElementById("edit-currentAmount").value)||0,
+        supporterCount: Number(document.getElementById("edit-supporterCount").value)||0,
+        goalAmount: Number(document.getElementById("edit-goalAmount").value)||0,
+        keyMessage: document.getElementById("edit-keyMessage").value.trim(),
+        kakaoChatUrl: document.getElementById("edit-kakaoChatUrl").value.trim()
+      };
+
+      try{
+        await updateDoc(doc(db,"projects",id),data);
+        alert("프로젝트가 업데이트되었습니다.");
+        render();
+      }catch(err){
+        alert("업데이트 실패: "+err.message);
+      }
+    });
 
     fullEditForm.addEventListener("submit",async e=>{
       e.preventDefault();
@@ -238,5 +332,13 @@ button.edit{background:#2563eb;color:#fff;border:none}
 
       try{
         await updateDoc(doc(db,"projects",id),data);
-        alert("프로젝트가 업데이트되었습니다.");
+        alert("프로젝트 전체 문구가 업데이트되었습니다.");
         modal.style.display="none";
+        render();
+      }catch(err){
+        alert("업데이트 실패: "+err.message);
+      }
+    });
+  </script>
+</body>
+</html>
