--- a/project.html
+++ b/project.html
@@ -33,8 +33,8 @@
       .block.headline{order:2;}
       .block.story{order:3;}
       .block.status{order:4;}
-      /* .block.beta 제거됨 */
-      .block.value{order:5;}
+      .block.beta{order:5;}
+      .block.value{order:6;}
     }
 
     /* 캐러셀 */
@@ -68,21 +68,17 @@
     .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
 
     /* ===== 후원 계좌 모달 ===== */
-    .paw-modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;
-      background:rgba(0,0,0,.45);z-index:9999}
+    .paw-modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.45);z-index:9999}
     .paw-modal[hidden]{display:none}
-    .paw-dialog{position:relative;background:#fff;border-radius:16px;max-width:520px;width:92%;
-      padding:24px 20px;box-shadow:0 10px 40px rgba(0,0,0,.2)}
+    .paw-dialog{position:relative;background:#fff;border-radius:16px;max-width:520px;width:92%;padding:24px 20px;box-shadow:0 10px 40px rgba(0,0,0,.2)}
     .paw-dialog h3{margin:0 0 12px;font-size:20px;font-weight:800}
-    .paw-acc{display:flex;gap:8px;align-items:center;justify-content:space-between;background:#f5f5f5;
-      border-radius:12px;padding:12px}
+    .paw-acc{display:flex;gap:8px;align-items:center;justify-content:space-between;background:#f5f5f5;border-radius:12px;padding:12px}
     .paw-acc code{font-size:16px;font-weight:800;word-break:keep-all}
     .paw-copy{border:0;border-radius:10px;padding:8px 12px;cursor:pointer}
     .paw-close{border:0;background:transparent;font-size:28px;line-height:1;cursor:pointer;position:absolute;top:8px;right:12px}
     .paw-donor-msg{margin:12px 2px 0;font-size:14px;color:#333}
     .paw-hint{margin:4px 2px 0;font-size:12px;color:#666}
-    .paw-toast{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);
-      background:#111;color:#fff;border-radius:999px;padding:6px 12px;font-size:12px}
+    .paw-toast{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);background:#111;color:#fff;border-radius:999px;padding:6px 12px;font-size:12px}
     .paw-toast[hidden]{display:none}
   </style>
 </head>
@@ -103,7 +99,7 @@
         <button type="button" class="paw-copy">복사</button>
       </div>
       <p class="paw-donor-msg">보내주신 마음 100% 후원자에게 Direct로 전달됩니다</p>
-      <p class="paw-hint">입금 후 단톡방에 간단히 인증해주시면 ‘연결된 마음 수’에 반영됩니다.</p>
+      <p class="paw-hint"> "매일 오전 11시 후원내역 취합 후 업데이트 됩니다"</p>
       <div class="paw-toast" id="pawToast" hidden>복사되었습니다</div>
     </div>
   </div>
@@ -122,7 +118,7 @@
     function candidatesOf(p){const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
       ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image'].forEach(k=>push(p[k]));
       ['galleryUrls','images','photos','files','receiptUrls'].forEach(k=>{
-        const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{if(typeof it==='string') push(it);else if(it&&(it.url||it.path)) push(it.url||it.path);});
+        const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{if(typeof it==='string') out.push(it);else if(it&&(it.url||it.path)) out.push(it.url||it.path);});
       });return out;}
     async function toHttpUrl(raw){if(!raw) return null;let v=String(raw).trim();if(/^(https?:|data:|blob:)/i.test(v)) return v;
       if(v.startsWith('/')) v=v.slice(1);try{return await getDownloadURL(ref(storage,v));}catch{return null;}}
@@ -143,7 +139,7 @@
 
         $detail.innerHTML=`
           <section class="paw-head block headline">
-            <h1 class="big-title">\${p.name??'(이름 없음)'}</h1>
+            <h1 class="big-title">${p.name??'(이름 없음)'}</h1>
           </section>
           <div class="paw-grid">
             <!-- 좌측 -->
@@ -151,10 +147,10 @@
               <!-- 캐러셀 -->
               <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  ${'${'}imgs.map((url,i)=>`
-                    <div class="carousel-item \${i===0?'active':''}">
-                      <img src="\${url}" class="d-block w-100" alt="img\${i}">
-                    </div>`).join('')${'}'}
+                  ${imgs.map((url,i)=>`
+                    <div class="carousel-item ${i===0?'active':''}">
+                      <img src="${url}" class="d-block w-100" alt="img${i}">
+                    </div>`).join('')}
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon"></span>
@@ -164,15 +160,15 @@
                 </button>
               </div>
               <div class="thumb-strip">
-                ${'${'}imgs.map((url,i)=>`<img src="\${url}" data-index="\${i}" class="\${i===0?'active':''}"/>`).join('')${'}'}
+                ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
               </div>
 
               <!-- 스토리 -->
               <section class="section-card block story">
                 <h2>스토리</h2>
-                ${'${'}p.summary?`<p style="color:#555">\${p.summary}</p>`:''${'}'}
-                ${'${'}p.keyMessage?`<p style="font-weight:700;color:#E87722">❝ \${p.keyMessage} ❞</p>`:''${'}'}
-                <p>\${formatDescription(p.description)}</p>
+                ${p.summary?`<p style="color:#555">${p.summary}</p>`:''}
+                ${p.keyMessage?`<p style="font-weight:700;color:#E87722">❝ ${p.keyMessage} ❞</p>`:''}
+                <p>${formatDescription(p.description)}</p>
               </section>
 
               <!-- 우리가 추구하는 가치 (문구 교체) -->
@@ -189,23 +185,23 @@
                 <h2>진행 현황</h2>
                 <div class="paw-kv">
                   <div class="k">❤️ 연결된 마음</div>
-                  <div class="v big">\${p.supporterCount??0}명</div>
+                  <div class="v big">${p.supporterCount??0}명</div>
                 </div>
                 <div class="paw-kv">
                   <div class="k">현재 모금액</div>
-                  <div class="v">\${fmt(current)}원</div>
+                  <div class="v">${fmt(current)}원</div>
                 </div>
                 <div class="paw-kv">
                   <div class="k">목표 금액</div>
-                  <div class="v">\${fmt(goal)}원</div>
+                  <div class="v">${fmt(goal)}원</div>
                 </div>
-                ${'${'}p.kakaoChatUrl ? `<a href="\${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''${'}'}
+                ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''}
                 <button class="btn-share" id="shareCopy">🔗 공유하기</button>
-                ${'${'}p.adminMessage?`
+                ${p.adminMessage?`
                   <div style="margin-top:18px;padding:14px;border-radius:12px;background:#fff8f2;
                               border:1px solid #f4d0b5;font-weight:800;color:#d35400;font-size:1.05rem;">
-                    📌 관리자 한마디: \${p.adminMessage}
-                  </div>`:''${'}'}
+                    📌 관리자 한마디: ${p.adminMessage}
+                  </div>`:''}
               </div>
             </div>
           </div>
@@ -228,9 +224,8 @@
           });
         });
 
-        /* ===== 계좌 팝업 (후원하기 가기 클릭 시) ===== */
+        /* ===== 계좌 팝업 (후원하러 가기 클릭 시) ===== */
         const ACCOUNT_TEXT='계좌번호 : KB국민 831801-04-173073 프로젝트파우';
-        const DONOR_MSG='보내주신 마음 100% 후원자에게 Direct로 전달됩니다';
 
         const modal=document.getElementById('pawAccModal');
         const accEl=modal.querySelector('.paw-acc-num');
@@ -248,9 +243,8 @@
         });
 
         copyBtn.addEventListener('click', async ()=>{
-          try{
-            await navigator.clipboard.writeText(ACCOUNT_TEXT);
-          }catch{
+          try{ await navigator.clipboard.writeText(ACCOUNT_TEXT); }
+          catch{
             const ta=document.createElement('textarea'); ta.value=ACCOUNT_TEXT;
             document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove();
           }
@@ -258,7 +252,8 @@
         });
 
         const donateBtn=document.querySelector('.btn-kakao');
-        donateBtn?.addEventListener('click', openModal, {passive:false});
+        donateBtn?.addEventListener('click', (e)=>{ e.preventDefault(); openModal(e); }, {passive:false});
+
       }catch(e){
         console.error(e);
         $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
